Bug 50940 - sessreg-1.0.7: Compilation error in sessreg.c -- undefined *TMPX paths
Summary: sessreg-1.0.7: Compilation error in sessreg.c -- undefined *TMPX paths
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: 7.7 (2012.06)
Hardware: All NetBSD
: medium major
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard: 2012BRB_Reviewed
Keywords: patch
Depends on:
Blocks:
 
Reported: 2012-06-10 09:43 UTC by Thomas Klausner
Modified: 2012-07-08 10:09 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Patch fixing the compilation issue. (523 bytes, patch)
2012-06-10 09:43 UTC, Thomas Klausner
no flags Details | Splinter Review

Description Thomas Klausner 2012-06-10 09:43:32 UTC
Created attachment 62860 [details] [review]
Patch fixing the compilation issue.

Compilation of sessreg-1.0.7 on NetBSD-6.99.7/amd64 fails with:
--- sessreg.o ---
  CC     sessreg.o
sessreg.c:257:16: error: use of undeclared identifier 'WTMPX_FILE'
                wtmpx_file = WTMPX_FILE;
                             ^
sessreg.c:264:16: error: use of undeclared identifier 'UTMPX_FILE'
                utmpx_file = UTMPX_FILE;
                             ^

NetBSD supports utmpx and wtmpx but does not provide these defines. Similar defines exist though, _PATH_WTMPX and _PATH_UTMPX. The attach patch serves as a workaround; a more complete solution might add checks to configure for them (not provided).
Comment 1 Jeremy Huddleston Sequoia 2012-06-14 01:10:28 UTC
Please submit your patch to xorg-devel for review if you haven't already.

Also, please fix the mime type to be text/plain on future attachments.
Comment 2 Alan Coopersmith 2012-07-08 10:09:13 UTC
Fix pushed to git master:
http://cgit.freedesktop.org/xorg/app/sessreg/commit/?id=1d609a5daa3fa1553111076561a1f800e462156d

Thanks for the patch.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.