Fix compilation on NetBSD - undefined *TMPX paths

Make sure file name defines exist on NetBSD.
https://bugs.freedesktop.org/show_bug.cgi?id=50940

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>